repo1/petclinic/deployment-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-clinic
  labels:
    app: pet-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pet-application
  template:
    metadata:
      labels:
        app: pet-application
    spec:
      containers:
        - name: my-container1
          image: "svikram01/springpet:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8080
              protocol: TCP
