repo1/petclinic/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: pet-clinic
  labels:
    app: pet-application
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 8080
      targetPort: 9090
  selector:
    app: pet-application
