repo1/petclinic/route-web.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pet-clinic
  labels:
    app: pet-application
spec:
  path: /
  to:
    kind: Service
    name: pet-clinic
    weight: 100
  port:
    targetPort: my-http
